--- a/style.css
+++ b/style.css
@@ -69,4 +69,35 @@ body{
     font-weight: 700rem;
     font-size: 0.875rem;
     letter-spacing: 0.25rem;
+    line-height: 1.5rem;
+}
+
+
+.segunda-secao{
+    background-color: var(--dark-blue);
+    margin-bottom: 4rem;
+}
+.margin-borde-padding{
+border-bottom: 1px solid var(--gunmetal) ;
+margin-bottom: 1.75rem;
+padding-bottom: 1.75rem;
+}
+
+
+.segunda-secao h2{
+    color: var(--yellow);
+    font-size: 2rem;
+    line-height: 100%;
+}
+
+.segunda-secao h3{
+    color: var(--amost-white);
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+
+.segunda-secao p{
+    color: var(--silver);
+    font-size: 0.9375rem;
+    line-height: 1.625rem;
 }
