--- a/style.css
+++ b/style.css
@@ -101,3 +101,14 @@ padding-bottom: 1.75rem;
     font-size: 0.9375rem;
     line-height: 1.625rem;
 }
+
+terceira-secao > div{
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+terceira-secao img{
+    max-width: 6.75rem;
+}
