--- a/style.css
+++ b/style.css
@@ -102,13 +102,33 @@ padding-bottom: 1.75rem;
     line-height: 1.625rem;
 }
 
-terceira-secao > div{
+.terceira-secao > div{
     display: flex;
     align-items: center;
     gap: 1.5rem;
     margin-bottom: 2rem;
 }
 
-terceira-secao img{
+.terceira-secao img{
     max-width: 6.75rem;
+}
+
+.terceira-secao strong{
+    color: var(--silver);
+    font-size: 2rem;
+    line-weight: 100%;
+}
+
+.terceira-secao h2{
+    color: var(--dark-blue) ;
+    font-size: 1.125rem;
+    font-weight: 800;
+    line-height: 1.5rem;
+    margin-block: 0.6rem;
+}
+
+.terceira-secao p{
+    font-size: 0.9375rem;
+    line-height: 1.675rem;
+    color: var(--gunmetal); 
 }
