--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 .header-mobile nav{
     position: fixed;
     background-color:var(--amost-white) ;
-    height: 0;
+    right: -16rem;
     top: 0;
     height: 100vh;
     width: 16rem;
@@ -59,7 +59,12 @@ body{
     flex-direction: column;
     padding: 1.5rem;
     gap: 1.5rem;
+
+    transition: 0.7s;
   
+}
+.header-mobile nav.abrir{
+    right: 0;
 }
 
 .header-mobile nav button{
